<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    

    <string name="app_name">CombatCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="mat">Mat:</string>
    <string name="value_default">5</string>
    <string name="focus_default">0</string>
    <string name="rat">Rat:</string>
    <string name="focus">Focus:</string>
    <string name="def">Def:</string>
    <string name="arm">Arm:</string>
    <string name="def_default">10</string>
    <string name="hp">HP:</string>
    <string name="hp_default">1</string>
    <string name="calculate">Calculate</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="weapons">Weapons</string>
    <string name="situation">Situation</string>
    <string name="advanced_settings">Adv. Options</string>
    <string name="save_load">Save/Load</string>
    <string name="pow_str">P+S:</string>
    <string name="ROF">ROF:</string>
    <string name="ranged">Ranged:</string>
    <string name="charging">Charging:</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_calc_display">CalcDisplayActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="save_options">Save</string>
    <string name="cancel_options">Cancel</string>
    <string name="title_activity_display_calc">DisplayCalcActivity</string>
    <string name="action_weapon">Add Weapon</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_add_weapon">New</string>
    <string name="go_back">Close</string>
    <string name="attack_text">Attack: </string>
    <string name="damage_text">Damage: </string>
    <string name="add_a_special_rule">Add a special rule</string>
    <string name="action_add_item">Add a special rule</string>
    
    
    <!-- Display Overview option strings -->
    <string name="crit_on">Crits On </string>
    <string name="crit_off">Crits Off </string>
    <string name="num_attacks_hit"># of Attacks Hitting:</string>
    <string name="expected_damage">Expected Damage:</string>
    <string name="expected_damage_all_hit">Expected Damage if all hit:</string>
    <string name="num_crits"># of Crits</string>
    
    <!-- Display Specific option strings -->
    
    <string name="specific_hit_chance_string">Hit %</string>
    <string name="specific_damage_string">Damage</string>
    <string name="specific_expected_damage_string">Avg Dam</string>
    <string name="specific_crit_chance_string">Crit %</string>
    <string name="weapon">Weapon:</string>
    <string name="attack_values">Info:</string>

    
    
    
    <!-- color strings -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey">#888888</color>
    
    <!-- generic menu option strings -->
    <string name="no_special_rules">No additional options added yet</string>
    
    <!-- Attacker option strings -->
    <string name="free_charge">Free Charge: </string>
    <string name="boosted_hit">Attack Rolls Boosted: </string>
    <string name="boosted_dam">Damage Rolls Boosted: </string>
    <string name="point_blank">Point Blank: </string>
    <string name="gunfighter">Gunfighter: </string>
    <string name="cra">CRA: </string>
    <string name="cma">CMA: </string>
    <string name="hunter">Hunter: </string>
    <string name="assault">Assault: </string>
    <string name="reroll_hit">Reroll Attack Rolls: </string>
    <string name="reroll_dam">Reroll Damage Rolls: </string>
    <string name="bonus_hit">Bonus To Hit: </string>
    <string name="bonus_dam">Bonus To Damage: </string>
    <string name="add_dice_hit">Add Attack Dice: </string>
    <string name="add_dice_dam">Add Damage Dice: </string>
    <string name="to_discard">to Discard: </string>
    <string name="all_attacks">Apply to All Attacks</string>
    <string name="add_value">Add/Minus Value</string>
    <string name="add_dice">Add/Remove Dice</string>
    <string name="discard_dice">Discard Lowest Dice</string>
    
    <!-- End Attacker option strings -->
    
    <!-- Defender option strings -->
    
    <string name="shield_value">Amount of Arm \nfrom Shields: </string>
    <string name="add_def">Add/Minus Def: </string>
    <string name="add_arm">Add/Minus Arm: </string>
    <string name="knockdown">Knocked Down: </string>
    <string name="set_defense">Set Defense: </string>
    <string name="camoflauge">Camoflauge: </string>
    
    
    <!-- End of Defender option strings -->
    
    <!-- Weapon option strings -->
    <string name="crit_options">Crit options </string>
    <string name="star_actions">* Actions and Attacks </string>
    <string name="shred">Shred: </string>
    <string name="add_die">Damage Die: </string>
    <string name="knockdown_attack">Knockdown: </string>
    <string name="sustained_attack">Sustained Attack: </string>
    <string name="combo_strike">Combo Strike: </string>
    <string name="arm_pierce">Armor Piercing: </string>
    <string name="auto_hit">Auto Hit: </string>
    <string name="auto_damage">Auto Damage: </string>
    <string name="chain_weapon">Chain Weapon: </string>
    <string name="chain_attack_attack">Chain Attack: Extra Attack: </string>
    <string name="brutal_charge">Brutal Charge: </string>
    <string name="powerful_attack">Powerful Attack: </string>
    <string name="powerful_charge">Powerful Charge: </string>
    <string name="double_damage">Double Damage: </string>
    <string name="weapon_master">Weaponmaster: </string>
    <string name="back_swing">Back Swing: </string>
    <string name="damage_title">Damage Modifiers</string>
    <string name="attack_title">Attack Modifiers</string>
    <string name="misc_title">Misc Modifiers</string>
    <string name="add_flat_damage">Add Flat Damage: </string>
    <string name="add_dice_dam_weapon">"Additional Damage Dice: "</string>
    <string name="discard_low_die">Discard Lowest Dice: </string>
    <string name="add_flat_attack">Add Flat Attack: </string>
    <string name="add_dice_atk_weapon">"Additional Attack Dice: "</string>
    
    <!-- End of Weapon option strings -->
    
    <string-array name="rof_array">
        <item>Infinite</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    
    <string-array name="focus_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    
    <string-array name="atk_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
    
    <string-array name="pow_array">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    
    <string-array name="def_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    
    <string-array name="arm_array">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    
    <string-array name="add_dice_array">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string-array name="discard_dice_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string-array name="add_value_array">
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <string-array name="list_item_array">
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    
    <string-array name="shield_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
        
        
        
        
</resources>