<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attacker"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mat" />
        
        <Spinner
            android:id="@+id/mat_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <!-- <EditText
            android:id="@+id/mat_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:ems="10"
            android:inputType="number"
            android:text="@string/value_default" /> -->

        <TextView
            android:id="@+id/TextView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rat" />

        <!--  <EditText
            android:id="@+id/rat_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:ems="10"
            android:inputType="number"
            android:text="@string/value_default" />
            
           -->
           
        <Spinner
            android:id="@+id/rat_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <TextView
            android:id="@+id/TextView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus" />

       <!-- 
       <EditText
            android:id="@+id/focus_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:ems="10"
            android:inputType="number"
            android:text="@string/focus_default" />
       -->
        
        <Spinner
            android:id="@+id/focus_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendToAttackerOptions"
            android:text="@string/advanced_settings" />
        	
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip"
        android:background="@drawable/list_divide" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defender"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def" />

        <!-- <EditText
            android:id="@+id/def_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:ems="10"
            android:hint="@string/value_default"
            android:inputType="number"
            android:text="@string/def_default" /> -->
            
        <Spinner
            android:id="@+id/def_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arm" />

        <!-- <EditText
            android:id="@+id/arm_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:ems="10"
            android:hint="@string/value_default"
            android:inputType="number"
            android:text="@string/def_default" /> -->
            
        <Spinner
            android:id="@+id/arm_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp" />

        <EditText
            android:id="@+id/health_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:ems="10"
            android:hint="@string/focus_default"
            android:inputType="number"
            android:text="@string/hp_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_settings"
            android:onClick="sendToDefenderOptions" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip"
        android:background="@drawable/list_divide" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weapons"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/Button20"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add_weapon" 
            android:onClick="addWeapons"/>
        
    </LinearLayout>
    
    <com.example.combatcalculator.WeaponView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="middle" />




    <View
        android:id="@+id/divider3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip"
        android:background="@drawable/list_divide" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/situation"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charging" />

        <CheckBox
            android:id="@+id/charging_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranged" />

        <CheckBox
            android:id="@+id/ranged_situation_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip"
        android:background="@drawable/list_divide" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="right"
        android:layout_weight="7.87"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculate"
            android:onClick="sendToCalc" />

    </LinearLayout>
</LinearLayout>

</ScrollView>